Added Cover Page to Weekly Blogs, Highlighted the Link to the Website

--- a/Blogs/BlogHomePage.html
+++ b/Blogs/BlogHomePage.html
@@ -37,12 +37,50 @@
       </head>
       <header class="page header"><h1>Weekly Blog Posts</h1></header>
       
+        <ul>
+          <li class="ContainerOne">
+            <section class="BlogText">
+              <a href="Week1-BlogPost.html" class="activeblogs">Week 1 Blog Post</a>
+                <p class="p-summary">A Reflection of My Experience Using GitHub, My Interests, and My Goals for the Course </p>
+              <img 
+              class="u-photo"
+              src="../Blogs/Images/Week1-CoverPage.jpg" 
+              alt="An Image of the Moon and Stars from Pinterest">
+            </section>
+          </li>
+
+          <li class="ContainerTwo">
+            <section class="BlogText">
+              <a href="Week2-BlogPost.html" class="activeblogs">Week 2 Blog Post</a>
+                <p class="p-summary">A Reflection on Moulthrop's 'You Say You Want a Revolution?' and How it Speaks to the Internet Today</p>
+              <img src="../Blogs/Images/Week2-CoverPage.jpg" alt="A Pixelated Image of the Moon and Stars taken from Pinterest">
+            </section>
+          </li>
+
+          <li class="ContainerThree">
+            <section class="BlogText">
+              <a href="Week 3-BlogPost.html" class="activeblogs">Week 3 Blog Post</a>
+                <p class="p-summary">Mapping Out the Contents of My Site and Reflecting on User Alignment and My develomental Progress for the Week</p>
+              <img src="../Blogs/Images/Week3-Coverpage.jpg" alt="An Image of the constellations taken from Pinterest">
+            </section>
+          </li>
+
+          <li class="ContainerFour">
+            <section class="BlogText">
+              <a href="Week 4-BlogPost.html" class="activeblogs">Week 4 Blog Post</a>
+                <p class="p-summary">A Reflection on What I've Struggled With, What I'm Proud of and What I'd like to Change About My 1st Website</p>
+              <img src="../Blogs/Images/Week4-CoverPage.jpg" alt="An Image of a Purple Galaxy Taken from Pinterest">
+            </section> 
+          </li>
+
+          <li class="ContainerFive">
+            <section class="BlogText">
+              <a href="Week 7-BlogPost.html" class="activeblogs">Week 7 Blog Post</a>
+                <p class="p-summary">Examples of Websits I'd Like to Use for Essay 1 and the Pros and Cons that Come With Each Website</p>
+              <img src="" alt="">
+            </section>
+          </li>
         </ul>
-          <li><a href="Week1-BlogPost.html">Week 1 Blog Post</a></li>
-          <li><a href="Week2-BlogPost.html">Week 2 Blog Post</a></li>
-          <li><a href="Week 3-BlogPost.html">Week 3 Blog Post</a></li>
-          <li><a href="Week 4-BlogPost.html">Week 4 Blog Post</a></li>
-    
     </section>
   </body>
 </html>
