Completed Blog Home Page: Added Footer, Columns, Dates, Images, Links

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </main>
 
     <footer>
-      <p>if you get lost, Seren will direct you to the nearest star &copy; </p>
+      <p>if you get lost, find the nearest star &copy; </p>
     </footer>
   </body>
 </html>
