--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       content="A website developed for a class assignment to build my skills as a web designer."
     />
     <link rel="stylesheet" href="/Styles/normalize.css" />
-    <link rel="stylesheet" href="/Styles/style.css" />
+    <link rel="stylesheet" href="/Styles/HomePage.css" />
     <script
       src="https://kit.fontawesome.com/dbf0b8b048.js"
       crossorigin="anonymous"
