--- a/Blogs/BlogHomePage.html
+++ b/Blogs/BlogHomePage.html
@@ -7,7 +7,7 @@
     <meta name="=author" content="Seren Mafunda" />
     <meta name="description" content="Blog Home Page for DIGA3008." />
     <link rel="stylesheet" href="/Styles/normalize.css">
-    <link rel="stylesheet" href="blog.css">
+    <link rel="stylesheet" href="blogs.css">
     <script
     src="https://kit.fontawesome.com/dbf0b8b048.js"
     crossorigin="anonymous"
