Trying tp get the deployment links to work Prt 2

--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -22,11 +22,11 @@
       <label for="logo" class="logo">Star Child</label>
       <img src="Styles/images/nobackgroundstar.png" class="starlogo" />
       <ul>
-        <li><a href="index.html" class="active">Home &#9956 </a></li>
-        <li><a href="Blogs/BlogHomePage.html" class="active">Blogs &#9956 </a></li>
-        <li><a href="Design/Design.html" class="active">Design &#9956 </a></li>
-        <li><a href="Portfolio/Portfolio.html" class="active">Portfolio &#9956 </a></li>
-        <li><a href="Essays/Essays.html" class="active">Essays &#9956 </a></li>
+        <li><a href="../index.html" class="active">Home &#9956</a></li>
+        <li><a href="../Blogs/BlogHomePage.html" class="active">Blogs &#9956</a></li>
+        <li><a href="../Design/Design.html" clas="active">Design &#9956</a></li>
+        <li><a href="../Portfolio/Portfolio.html">Portfolio &#9956</a></li>
+        <li><a href="../Essays/Essays.html">Essay &#9956</a></li>
       </ul>
     </nav>
   </body>
