--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="Portfolio.css" />
-    <link rel="stylesheet" href="/Styles/normalize.css">
+    <!--<link rel="stylesheet" href="/Styles/normalize.css">-->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Page</title>
@@ -20,7 +20,7 @@
       ></label>
 
       <label for="logo" class="logo">Star Child</label>
-      <img src="Styles/images/nobackgroundstar.png" class="starlogo" />
+      <img src="../Styles/images/nobackgroundstar.png" class="starlogo" />
       <ul>
         <li><a href="../index.html" class="active">Home &#9956</a></li>
         <li><a href="../Blogs/BlogHomePage.html" class="active">Blogs &#9956</a></li>
