Commented out Padding in Home pg Css,

--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -13,21 +13,48 @@
   </head>
 
   <body>
-    <nav>
-      <input type="checkbox" id="check" />
-      <label for="check" class="menu-icon"
-        ><i class="fa-solid fa-bars"></i
-      ></label>
+    <header>
+      <nav>
+        <input type="checkbox" id="check-two" />
+        <label for="check-two" class="menu-icon"
+          ><i class="fa-solid fa-bars"></i>
+        </label>
 
-      <label for="logo" class="logo">Star Child</label>
-      <img src="../Styles/images/nobackgroundstar.png" class="starlogo" />
-      <ul>
-        <li><a href="../index.html" class="active">Home &#9956</a></li>
-        <li><a href="../Blogs/BlogHomePage.html" class="active">Blogs &#9956</a></li>
-        <li><a href="../Design/Design.html" clas="active">Design &#9956</a></li>
-        <li><a href="../Portfolio/Portfolio.html">Portfolio &#9956</a></li>
-        <li><a href="../Essays/Essays.html">Essay &#9956</a></li>
-      </ul>
-    </nav>
+        <label for="logo" class="logo">Star Child</label>
+          <img src="../Styles/images/nobackgroundstar.png" class="starlogo" />
+        <ul>
+          <li><a href="../index.html" class="active">Home &#9956</a></li>
+          <li><a href="../Blogs/BlogHomePage.html" class="active">Blogs &#9956</a></li>
+          <li><a href="../Design/Design.html" clas="active">Design &#9956</a></li>
+          <li><a href="../Portfolio/Portfolio.html" class="active">Portfolio &#9956</a></li>
+          <li><a href="../Essays/Essays.html" class="active">Essay &#9956</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section class="container">
+        <section class="profile">
+          <section class="profileContainer">
+            <article class="ProfilePicureImage">
+              <img src="../Styles/images/PicrewProfilePicture.png" alt="Seren Mafunda" class="u-photo"/>
+            </article>
+            <section>
+              <h2 class="title">Seren Mafunda</h2>
+              <p class="profile-title">3rd Year Digital Arts Student</p>
+              <p class="description">
+                My name is Seren, and I am a 3rd yar student studying Digital Arts at the University of Witwatersrand. I major in three modules being: Animation, Writing and Web Design, so you could say I'm a hard-working over-achiever. I am very passionate about the things I study, but I am especially excited about Animation and Web Design. I've got good grasp on my coding skills, but would love the chance to hone in on those skills, by taking on more Web Design projects. 
+              </p>
+              <p  class="description">
+                Contact Me on My Email:
+                <a class="u-url" href="malito:sramafunda@gmail.com">sramafunda@gmail.com</a>
+              </p>
+            </section>
+          </section>
+        </section>
+      </section>
+
+      
+    </main>
   </body>
 </html>
