Fixing the nav bar

--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -7,9 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Page</title>
     <meta name="=author" content="Seren Mafunda" />
-    <meta
+    <meta 
       name="description"
       content="A Page to show my profile and my work as a web designer, animator and writer."/>
+      <link rel="stylesheet" href="./Styles/HomePage.css" />
+    <script
+      src="https://kit.fontawesome.com/dbf0b8b048.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -25,7 +30,7 @@
         <ul>
           <li><a href="../index.html" class="active">Home &#9956</a></li>
           <li><a href="../Blogs/BlogHomePage.html" class="active">Blogs &#9956</a></li>
-          <li><a href="../Design/Design.html" clas="active">Design &#9956</a></li>
+          <li><a href="../Design/Design.html" class="active">Design &#9956</a></li>
           <li><a href="../Portfolio/Portfolio.html" class="active">Portfolio &#9956</a></li>
           <li><a href="../Essays/Essays.html" class="active">Essay &#9956</a></li>
         </ul>
