--- a/Blogs/BlogHomePage.html
+++ b/Blogs/BlogHomePage.html
@@ -9,7 +9,7 @@
     <!--<link rel="stylesheet" href="/Styles/normalize.css">-->
     <link rel="stylesheet" href="blogs.css">
     <script
-    src="https://kit.fontawesome.com/dbf0b8b048.js"
+    src="https://k-it.fontawesome.com/dbf0b8b048.js"
     crossorigin="anonymous"
   ></script>
 
