--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -18,48 +18,55 @@
   </head>
 
   <body>
-    <header>
-      <nav>
-        <input type="checkbox" id="check-two" />
-        <label for="check-two" class="menu-icon"
-          ><i class="fa-solid fa-bars"></i>
-        </label>
-
-        <label for="logo" class="logo">Star Child</label>
+    <section>
+      <head>
+        <nav>
+          <input type="checkbox" id="check-two" />
+      <label for="check-two" class="menu-icon"
+        ><i class="fa-solid fa-bars"></i
+      ></label>
+      
+          <label for="logo" class="logo">Star Child</label>
           <img src="../Styles/images/nobackgroundstar.png" class="starlogo" />
-        <ul>
+          <ul>
           <li><a href="../index.html" class="active">Home &#9956</a></li>
           <li><a href="../Blogs/BlogHomePage.html" class="active">Blogs &#9956</a></li>
+          <li><a href="../Essays/Essays.html" class="active">Essay &#9956</a></li>
           <li><a href="../Design/Design.html" class="active">Design &#9956</a></li>
           <li><a href="../Portfolio/Portfolio.html" class="active">Portfolio &#9956</a></li>
-          <li><a href="../Essays/Essays.html" class="active">Essay &#9956</a></li>
         </ul>
-      </nav>
-    </header>
-
-    <main>
-      <section class="container">
-        <section class="profile">
-          <section class="profileContainer">
-            <article class="ProfilePicureImage">
-              <img src="../Styles/images/PicrewProfilePicture.png" alt="Seren Mafunda" class="u-photo"/>
-            </article>
-            <section>
-              <h2 class="title">Seren Mafunda</h2>
-              <p class="profile-title">3rd Year Digital Arts Student</p>
-              <p class="description">
-                My name is Seren, and I am a 3rd yar student studying Digital Arts at the University of Witwatersrand. I major in three modules being: Animation, Writing and Web Design, so you could say I'm a hard-working over-achiever. I am very passionate about the things I study, but I am especially excited about Animation and Web Design. I've got good grasp on my coding skills, but would love the chance to hone in on those skills, by taking on more Web Design projects. 
-              </p>
-              <p  class="description">
-                Contact Me on My Email:
-                <a class="u-url" href="malito:sramafunda@gmail.com">sramafunda@gmail.com</a>
-              </p>
-            </section>
-          </section>
-        </section>
+        </nav>
+      </head>
+      <header class="page header"><h1>Welcome to My Profile Page</h1></header>
+      <main>
+        <section class="container">
+        <section class="profilecontainer">
+          <section class="profile">
+        <article class="profileImg">
+        <img 
+        class="u-photo"
+        src="../Styles/images/PicrewProfilePicture.png" 
+        alt="A Stylized Image of Seren Mafunda"
+        width="320"
+        height="320"
+        />
+      </article>
+      <section>
+        <h2 class="title">You've Landed on Seren Mafunda's Profile</h2>
+        <p class="profiletitle">Hey I'm Seren and I'm a Digital Arts Student</p>
+        <p class="description">
+          I am a 3rd year Digital Arts Student, studying at the University of Witwatersrand. I am currently triple majoring in Animation, Web Design and Writing. I am rather passionate about everything I do, though I do have a special interest in Web Design and Animation. My web design and animation skills are pretty strong, however I hope to hone in on these skills while working on future projects 
+        </p>
+        <p class="description">
+          Be sure to contact me through my email:
+            <a class="u-url" href="malito:sramafunda@gmail.com"
+            >sramafunda@gmail.com</a>
+        </p>
       </section>
-
-      
-    </main>
+    </section>
+  </section>
+    </section>
+      </main>
+    </section>
   </body>
 </html>
