Week7 Blog Page

--- a/Blogs/Week 1-BlogPost.html
+++ b/Blogs/Week 1-BlogPost.html
@@ -6,17 +6,18 @@
     <title>Week 1 Blog Post</title>
     <meta name="author" content="Seren Mafunda" />
     <meta name="description" content="Blog 1 Post for DIGA3008" />
+    <link rel="stylesheet" href="weeklyblogs.css">
   </head>
 
   <body>
     <header>
       <nav>
         <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="../Blogs/BlogHomePage.html">Blogs</a></li>
-          <li><a href="../Essays/Essays.html">Essay</a></li>
-          <li><a href="../Design/Design.html">Design</a></li>
-          <li><a href="../Portfolio/Portfolio.html"></a></li>
+          <li><a href="../index.html">Home &#9956</a></li>
+          <li><a href="../Blogs/BlogHomePage.html">Blogs &#9956</a></li>
+          <li><a href="../Essays/Essays.html">Essay &#9956</a></li>
+          <li><a href="../Design/Design.html">Design &#9956</a></li>
+          <li><a href="../Portfolio/Portfolio.html">Portfolio &#9956</a></li>
         </ul>
       </nav>
     </header>
@@ -107,5 +108,8 @@
         </section>
       </article>
     </main>
+    <footer>
+      <p>if you get lost, find the nearest star &copy; </p>
+    </footer>
   </body>
 </html>
