--- a/Blogs/Week 4-BlogPost.html
+++ b/Blogs/Week 4-BlogPost.html
@@ -6,17 +6,18 @@
     <title>Week 4 Blog Post</title>
     <meta name="author" content="Seren Mafunda" />
     <meta name="description" content="Blog 4 Post for DIGA3008" />
+    <link rel="stylesheet" href="weeklyblogs.css">
   </head>
 
   <body>
     <header>
       <nav>
         <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="../Blogs/BlogHomePage.html">Blogs</a></li>
-          <li><a href="../Essays/Essays.html">Essays</a></li>
-          <li><a href="../Design/Design.html">Design</a></li>
-          <li><a href="../Portfolio/Portfolio.html">Portfolio</a></li>
+          <li><a href="../index.html">Home &#9956</a></li>
+          <li><a href="../Blogs/BlogHomePage.html">Blogs &#9956</a></li>
+          <li><a href="../Essays/Essays.html">Essays &#9956</a></li>
+          <li><a href="../Design/Design.html">Design &#9956</a></li>
+          <li><a href="../Portfolio/Portfolio.html">Portfolio &#9956</a></li>
         </ul>
       </nav>
     </header>
