--- a/Blogs/Week 3-BlogPost.html
+++ b/Blogs/Week 3-BlogPost.html
@@ -6,16 +6,17 @@
     <title>Week 3 Blog Post</title>
     <meta name="author" content="Seren Mafunda" />
     <meta name="description" content="Blog 3 Post for DIGA3008" />
+    <link rel="stylesheet" href="weeklyblogs.css">
   </head>
 
   <body>
     <header>
       <nav>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../Blogs/BlogHomePage.html">Blogs</a></li>
-        <li><a href="../Essays/Essays.html">Essay</a></li>
-        <li><a href="../Design/Design.html">Design</a></li>
-        <li><a href="../Portfolio/Portfolio.html">Portfolio</a></li>
+        <li><a href="../index.html">Home &#9956</a></li>
+        <li><a href="../Blogs/BlogHomePage.html">Blogs &#9956</a></li>
+        <li><a href="../Essays/Essays.html">Essay &#9956</a></li>
+        <li><a href="../Design/Design.html">Design &#9956</a></li>
+        <li><a href="../Portfolio/Portfolio.html">Portfolio &#9956</a></li>
       </nav>
     </header>
    
