Trying to Get Image links to show up

--- a/Blogs/Week 7-BlogPost.html
+++ b/Blogs/Week 7-BlogPost.html
@@ -35,8 +35,8 @@
           <section class="e-content">
             <h2><a href="https://www.awwwards.com/websites/South%20Africa/">South Africa Websites</a></h2>
             <article class="webImg">
-                <img class="u-photo" src="/Blogs/Images/SAWebsiteHomePg.png" alt="A Screenshot showcasing the 1st half of 'South Africa Websites' Home Page" width="320" height="320">
-                <img src="/Blogs/Images/SAWebsiteHmPG(2).png" alt="A Screenshot showcasing the 2nd half of 'South Africa Websites' Home Page" width="320" height="320">
+                <img class="u-photo" src="../Blogs/Images/SAWebsiteHomePg.png" alt="A Screenshot showcasing the 1st half of 'South Africa Websites' Home Page" width="320" height="320">
+                <img src="../Blogs/Images/SAWebsiteHmPG(2).png" alt="A Screenshot showcasing the 2nd half of 'South Africa Websites' Home Page" width="320" height="320">
             </article>
             <section>
                 <h3 class="title">Cons</h3>
@@ -54,8 +54,8 @@
 
                 <h2><a href="https://sacreative.co.za/category/creative/">SA Creatives</a></h2>
                 <article class="webImg">
-                    <img src="/Blogs/Images/SCreativHomePage.png" alt="A Screenshot showing the SA Creatives Home Page">
-                    <img src="/Blogs/Images/SACreativesPosts.png" alt="A screenshot showing the SA Creatives Latest Posts on their homepage">
+                    <img src="../Blogs/Images/SCreativHomePage.png" alt="A Screenshot showing the SA Creatives Home Page">
+                    <img src="../Blogs/Images/SACreativesPosts.png" alt="A screenshot showing the SA Creatives Latest Posts on their homepage">
                 </article>
                 <section>
                     <h3 class="title">Pros</h3>
@@ -72,9 +72,9 @@
     
                     <h2><a href="https://www.mama.co.za/">Mama Creative</a></h2>
                     <article class="webImg">
-                        <img src="/Blogs/Images/MCHomePage.png" alt="A screenshot showcasing the Mama Creative Home Page">
-                        <img src="/Blogs/Images/MCNavBar.png" alt="A screenshot showcasing the Mama Creative's Navigation Bar">
-                        <img src="/Blogs/Images/MCProjectPage.png" alt="A screenshot showcasing the Mama Creative's Project Page">
+                        <img src="../Blogs/Images/MCHomePage.png" alt="A screenshot showcasing the Mama Creative Home Page">
+                        <img src="../Blogs/Images/MCNavBar.png" alt="A screenshot showcasing the Mama Creative's Navigation Bar">
+                        <img src="../Blogs/Images/MCProjectPage.png" alt="A screenshot showcasing the Mama Creative's Project Page">
                     </article>
                     <section>
                         <h3 class="title">Pros</h3>
