--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -75,7 +75,7 @@
 
           <section class="portfolio-box">
             <section class="portfolio-image">
-              <img src="/Portfolio/Images/UI-ShopAssignment.png" alt="A screenshot of a game focused on the UI of the buy and sell mechanic.">
+              <img src="../Portfolio/Images/UI-ShopAssignment.png" alt="A screenshot of a game focused on the UI of the buy and sell mechanic.">
             </section>
 
             <section class="portfolio-text">
@@ -87,7 +87,7 @@
 
           <section class="portfolio-box">
             <section class="portfolio-image">
-              <img src="/Portfolio/Images/FPC-GroceryStoreGame.png" alt="A screenshot of my FPC game">
+              <img src="../Portfolio/Images/FPC-GroceryStoreGame.png" alt="A screenshot of my FPC game">
             </section>
 
             <section class="portfolio-text">
@@ -101,7 +101,7 @@
           
           <section class="portfolio-box">
             <section class="portfolio-image">
-              <img src="/Portfolio/Images/FloraPixieCharacterSketch.png" alt="Forest Pixie Drawing">
+              <img src="../Portfolio/Images/FloraPixieCharacterSketch.png" alt="Forest Pixie Drawing">
             </section>
 
             <section class="portfolio-text">
@@ -112,7 +112,7 @@
 
           <section class="portfolio-box">
             <section class="portfolio-image">
-              <img src="/Portfolio/Images/FP-ShooterCharacter.png" alt="A Mushroom Character for a 1st person Shooter Game">
+              <img src="../Portfolio/Images/FP-ShooterCharacter.png" alt="A Mushroom Character for a 1st person Shooter Game">
             </section>
 
             <section class="portfolio-text">
@@ -123,7 +123,7 @@
 
           <section class="portfolio-box">
             <section class="portfolio-image">
-              <img src="/Portfolio/Images/MushroomCharacterTurnArounds.png" alt="Character Turn-Arounds for a Mushroom Character">
+              <img src="../Portfolio/Images/MushroomCharacterTurnArounds.png" alt="Character Turn-Arounds for a Mushroom Character">
             </section>
 
             <section class="portfolio-text">
@@ -136,7 +136,7 @@
 
           <section class="portfolio-box">
             <section class="portfolio-image">
-              <img src="/Portfolio/Images/CoverPageForSubstackPost.png" alt="An Image of the moon in the fog">
+              <img src="../Portfolio/Images/CoverPageForSubstackPost.png" alt="An Image of the moon in the fog">
             </section>
 
             <section class="portfolio-text">
