Basic css layout for blog pages

--- a/Blogs/Week 4-BlogPost.html
+++ b/Blogs/Week 4-BlogPost.html
@@ -7,11 +7,22 @@
     <meta name="author" content="Seren Mafunda" />
     <meta name="description" content="Blog 4 Post for DIGA3008" />
     <link rel="stylesheet" href="weeklyblogs.css">
+    <script
+      src="https://kit.fontawesome.com/dbf0b8b048.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
     <header>
       <nav>
+        <input type="checkbox" id="check-six" />
+        <label for="check-six" class="menu-icon"
+          ><i class="fa-solid fa-bars"></i
+        ></label> 
+
+        <label for="logo" class="logo">Star Child</label>
+        <img src="../Styles/images/nobackgroundstar.png" class="starlogo" />
         <ul>
           <li><a href="../index.html">Home &#9956</a></li>
           <li><a href="../Blogs/BlogHomePage.html">Blogs &#9956</a></li>
