--- a/Blogs/Week 1-BlogPost.html
+++ b/Blogs/Week 1-BlogPost.html
@@ -7,17 +7,28 @@
     <meta name="author" content="Seren Mafunda" />
     <meta name="description" content="Blog 1 Post for DIGA3008" />
     <link rel="stylesheet" href="weeklyblogs.css">
+    <script
+      src="https://kit.fontawesome.com/dbf0b8b048.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
     <header>
       <nav>
+        <input type="checkbox" id="check-three" />
+      <label for="check-three" class="menu-icon"
+        ><i class="fa-solid fa-bars"></i
+      ></label>
+      
+          <label for="logo" class="logo">Star Child</label>
+          <img src="../Styles/images/nobackgroundstar.png" class="starlogo" />
         <ul>
-          <li><a href="../index.html">Home &#9956</a></li>
-          <li><a href="../Blogs/BlogHomePage.html">Blogs &#9956</a></li>
-          <li><a href="../Essays/Essays.html">Essay &#9956</a></li>
-          <li><a href="../Design/Design.html">Design &#9956</a></li>
-          <li><a href="../Portfolio/Portfolio.html">Portfolio &#9956</a></li>
+          <li><a href="../index.html" class="active">Home &#9956</a></li>
+          <li><a href="../Blogs/BlogHomePage.html" class="active">Blogs &#9956</a></li>
+          <li><a href="../Essays/Essays.html" class="active">Essay &#9956</a></li>
+          <li><a href="../Design/Design.html" class="active">Design &#9956</a></li>
+          <li><a href="../Portfolio/Portfolio.html" class="active">Portfolio &#9956</a></li>
         </ul>
       </nav>
     </header>
