Basic CSS for a Design Section

--- a/Design/Style Guide.html
+++ b/Design/Style Guide.html
@@ -6,16 +6,30 @@
     <title>Style Guide</title>
     <meta name="author" content="Seren Mafunda" />
     <meta name="description" content="Style Guide for DIGA3008" />
+    <link rel="stylesheet" href="design.css">
+    <script
+      src="https://kit.fontawesome.com/dbf0b8b048.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
     <header>
       <nav>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../Blogs/BlogHomePage.html">Blogs</a></li>
-        <li><a href="../Essays/Essays.html">Essays</a></li>
-        <li><a href="../Design/Design.html">Design</a></li>
-        <li><a href="../Portfolio/Portfolio.html">Portfolio</a></li>
+        <input type="checkbox" id="check-nine" />
+        <label for="check-nine" class="menu-icon"
+          ><i class="fa-solid fa-bars"></i
+        ></label> 
+
+        <label for="logo" class="logo">Star Child</label>
+        <img src="../Styles/images/nobackgroundstar.png" class="starlogo" />
+        <ul>
+          <li><a href="../index.html" class="active">Home &#9956</a></li>
+          <li><a href="../Blogs/BlogHomePage.html" class="active">Blogs &#9956</a></li>
+          <li><a href="../Essays/Essays.html" class="active">Essays &#9956</a></li>
+          <li><a href="../Design/Design.html" class="active">Design &#9956</a></li>
+          <li><a href="../Portfolio/Portfolio.html" class="active">Portfolio &#9956</a></li>
+        </ul>
       </nav>
     </header>
 
