--- a/Design/Design.html
+++ b/Design/Design.html
@@ -6,17 +6,30 @@
     <title>Design Page</title>
     <meta name="author" content="Seren Mafunda" />
     <meta name="description" content="Design Page for DIGA3008" />
+    <link rel="stylesheet" href="design.css">
+    <script
+      src="https://kit.fontawesome.com/dbf0b8b048.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
     <header>
       <nav>
+        <nav>
+          <input type="checkbox" id="check-eight" />
+          <label for="check-eight" class="menu-icon"
+            ><i class="fa-solid fa-bars"></i
+          ></label> 
+  
+          <label for="logo" class="logo">Star Child</label>
+          <img src="../Styles/images/nobackgroundstar.png" class="starlogo" />
         <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="../Blogs/BlogHomePage.html">Blog</a></li>
-          <li><a href="../Essays/Essays.html">Essay</a></li>
-          <li><a href="../Design/Design.html">Design</a></li>
-          <li><a href="../Portfolio/Portfolio.html">Portfolio</a></li>
+          <li><a href="../index.html" class="active">Home &#9956</a></li>
+          <li><a href="../Blogs/BlogHomePage.html" class="active">Blog &#9956</a></li>
+          <li><a href="../Essays/Essays.html" class="active">Essay &#9956</a></li>
+          <li><a href="../Design/Design.html" class="active">Design &#9956</a></li>
+          <li><a href="../Portfolio/Portfolio.html" class="active">Portfolio &#9956</a></li>
         </ul>
       </nav>
     </header>
