Weekly Blogs: h1, h2, h3, and footer

--- a/Blogs/Week 3-BlogPost.html
+++ b/Blogs/Week 3-BlogPost.html
@@ -81,7 +81,7 @@
         </ul>
     </main>
     <footer>
-      <p>Proudly Brought to you By Seren Mafunda</p>
+      <p>if you get lost, find the nearest star &copy; </p>
     </footer>
   </body>
 </html>
