--- a/Blogs/Week 4-BlogPost.html
+++ b/Blogs/Week 4-BlogPost.html
@@ -24,11 +24,11 @@
         <label for="logo" class="logo">Star Child</label>
         <img src="../Styles/images/nobackgroundstar.png" class="starlogo" />
         <ul>
-          <li><a href="../index.html">Home &#9956</a></li>
-          <li><a href="../Blogs/BlogHomePage.html">Blogs &#9956</a></li>
-          <li><a href="../Essays/Essays.html">Essays &#9956</a></li>
-          <li><a href="../Design/Design.html">Design &#9956</a></li>
-          <li><a href="../Portfolio/Portfolio.html">Portfolio &#9956</a></li>
+          <li><a href="../index.html" class="active">Home &#9956</a></li>
+          <li><a href="../Blogs/BlogHomePage.html" class="active">Blogs &#9956</a></li>
+          <li><a href="../Essays/Essays.html" class="active">Essays &#9956</a></li>
+          <li><a href="../Design/Design.html" class="active">Design &#9956</a></li>
+          <li><a href="../Portfolio/Portfolio.html" class="active">Portfolio &#9956</a></li>
         </ul>
       </nav>
     </header>
@@ -151,7 +151,7 @@
       </ul>
     </main>
     <footer>
-      <p>Proudly Brought to you By Seren Mafunda</p>
+      <p>if you get lost, find the nearest star &copy; </p>
     </footer>
   </body>
 </html>
