Weekly Blogs: Fixing the Paragraph alignment and Images

--- a/Blogs/Week 1-BlogPost.html
+++ b/Blogs/Week 1-BlogPost.html
@@ -45,7 +45,7 @@
         </p>
         <section class="e-content">
           <h2>My Experience Setting Up GitHub</h2>
-          <p>
+          <p class="description">
             My experience setting up my GitHub was relatively easy, seeing as I
             already have a GitHub account and I have experience committing my
             work onto a repository from last year. What I did have trouble with
@@ -60,7 +60,7 @@
           </p>
 
           <h2>Reflecting on the Readings</h2>
-          <p>
+          <p class="description">
             One of the readings I had selected was “Flash and its History on the
             Web” by Jay. This article was particularly very interesting, to me,
             as someone who’s been on the internet for as long as I can remember.
@@ -87,7 +87,7 @@
           </p>
 
           <h2>Interesting Things Found on the History of the Web</h2>
-          <p>
+          <p class="description">
             An interesting thing I learnt about the history of the internet was
             actually from this article. I learnt that so much of the internet,
             that we know today, was connected to Flash’s multimedia software
@@ -103,7 +103,7 @@
           </p>
 
           <h2>Goals For the Course</h2>
-          <p>
+          <p class="description">
             I have a couple of goals for this course. One being for my website
             portfolio to be an extension of my creativity. I want whatever
             vision I have, to be well executed to its fullest extent. Another
