--- a/Blogs/Week 4-BlogPost.html
+++ b/Blogs/Week 4-BlogPost.html
@@ -45,7 +45,7 @@
         </p>
         <section class="e-content">
           <h2>My Journey With HTML Structure:</h2>
-          <p>
+          <p class="description">
             The initial phases of me working through my website, using HTML was
             fairly easy. This was in part due to the fact that I had kept up
             with the tutorial and lectures on how to go about setting it up,
@@ -57,7 +57,7 @@
           </p>
 
           <h2>What I've Struggled With:</h2>
-          <p>
+          <p class="description">
             Something that I found was a huge struggle when working on my
             website, were my links. Specifically the links to the index/home,
             and blog home page. This was particularly scary to have to deal with
@@ -66,7 +66,7 @@
             access my blog home page they would not be able to view the contents
             of my blog posts.
           </p>
-          <p>
+          <p class="description">
             I think this problem came about because initially, when I was
             setting up these links, I would only check their functionality
             through Live Server and not through my GitHub Repository. This gave
@@ -78,14 +78,14 @@
 
           <h2>IxD Process:</h2>
           <h3>Discovering User Needs:</h3>
-          <p>
+          <p class="description">
             Being aware of user needs has helped me structure my website more
             efficiently. Knowing what I would like users to do or see in my
             website, ensures that I included information that was relevant to
             their needs.
           </p>
           <h3>Developing the Framework:</h3>
-          <p>
+          <p class="description">
             The way I kept user experience in mind when developing my framework
             was by making sure that I had well structured pages. I ensured that
             my work would be able to be picked up by the crawlers and I did this
@@ -94,7 +94,7 @@
             clear formatting would make it easier to navigate.
           </p>
           <h3>Refining the Exprience:</h3>
-          <p>
+          <p class="description">
             The way I chose to refine my user experience was by ensuring that I
             had a well organized website. I wanted to ensure that all the
             related work had been grouped together. I believe that the structure
@@ -103,7 +103,7 @@
           </p>
 
           <h2>What I'm Proud of:</h2>
-          <p>
+          <p class="description">
             What I’m most proud of when it comes to my webpage is, admittedly,
             my blog page section. I’m very pleased with the way it is structured
             and how organized it is. I’ve added a return link within each blog
@@ -116,13 +116,13 @@
           </p>
 
           <h2>Change for the Future</h2>
-          <p>
+          <p class="description">
             I plan on implementing a more structured navigation bar. As of right
             now I feel as though my navigation is lacking in a lot of elements
             and like it isn’t really structured in a way that will help viewers
             efficiently navigate through my website.
           </p>
-          <p>
+          <p class="description">
             Another thing that I would like to add onto my website is a lot more
             descriptions, especially on the Home Page, I feel like it would add
             a lot more personality to the website and for it to feel more
@@ -131,7 +131,7 @@
           </p>
 
           <h2>What I'd Like do Moving Forward:</h2>
-          <p>
+          <p class="description">
             Working on the structuring of HTML has taught me a lot of background
             knowledge on the importance of semantic markups and what it means
             for a website to be functional. What I’m excited about in the future
