--- a/Blogs/Week2-BlogPost.html
+++ b/Blogs/Week2-BlogPost.html
@@ -45,7 +45,7 @@
   <section class="e-content">
     <h2>Moulthrop’s Essay & How it Speaks to the Interenet Today</h2>
     <body>
-      <p>
+      <p class="description">
         Moulthrop’s essay, ‘You Say You Want a Revolution? Hypertext and the
         Laws of Media’ speaks directly to the evolution of the internet today,
         even though it was written before the modern web took shape. His essay
@@ -61,7 +61,7 @@
         space early pioneers imagined, but rather a tightly managed corporate
         landscape.
       </p>
-      <p>
+      <p class="description">
         Moulthrop also discusses how hypertext was supposed to liberate readers
         from linear, book-like experiences and empower them to create their own
         pathways of knowledge. While the internet offers interconnected
@@ -72,7 +72,7 @@
         mentioning MP3 swapping, multiplayer games, and instant messaging as
         early examples of how hypertext would evolve beyond just textual links
       </p>
-      <p>
+      <p class="description">
         Moulthrop’s insights remain strikingly relevant today. The internet has
         followed the trajectory he predicted, because instead of breaking away
         from traditional power structures, it has often reinforced them. While
@@ -83,7 +83,7 @@
       </p>
 
       <h2>Folder Structure & URL Scheme</h2>
-      <p>
+      <p class="description">
         What I'm hoping for in the first phase of my website is for it to be
         simple and functional. Eventually, as I get more comfortable with the
         coding languages, I want my website to be a lot more vibrant and
@@ -92,31 +92,58 @@
         creative passions, whilst also being functional, well-structured and
         organized. I want all my folders to be organized very neatly with clearly lables so I am able to effeciently reference them later on. Here is an example of this:
       </p>
-      <figure>
-        <div class="row">
-          <div class="column">
-            <img src="../Blogs/Images/FolderStructure.png" alt="Image showing the folder structure of the website." width="200" height="250"> 
-          </div>
-          <div class="column">
-            <img src="../Blogs/Images/ExtendedFolderStructure.png" alt="Image showing the opened folders from the folder structure of the website ." width="200" height="300"> 
-          </div>
-        </div>
-      </figure>
-      <p>
+
+      <section class="webImg-container">
+
+        <section class="webImg-box">
+          <section class="webImg-image">
+            <img class="u-photo" src="../Blogs/Images/FolderStructure.png" alt="Image showing the folder structure of the website.">
+          </section>
+
+          <section class="webImg-text">
+            <span>Folder Structure</span>
+            <p class="p-summary">Separated Folders Into 8 Different Sections</p>
+          </section>
+        </section>
+
+        <section class="webImg-box">
+          <section class="webImg-image">
+            <img class="u-photo" src="../Blogs/Images/ExtendedFolderStructure.png" alt="Image showing the opened folders from the folder structure of the website">
+          </section>
+
+          <section class="webImg-text">
+            <span>Extended Folder Structure</span>
+            <p class="p-summary">Breaking down the folder structure, further, by opening the contents of the folder</p>
+          </section>
+        </section>
+      </section>
+      
+      <p class="description">
         I separated the folders into eight sections: Index (Home Page), Blogs, Essays, Design, Portfolio, Images, Styles, and Scripts. As I mentioned above I organized them this way so I would be able to easily reference these folders at a later stage. Furthermore, I had separated the blog folder into separate pages containing its own blog post, and this was done as to not have the viewer be bombarded with loads of words on one singular page. I thought this would make navigating through my website a lot easier. 
       </p>
-      <p>
+      <p class="description">
         I also added an image folder into my blog folder (and in the future, others) just so I am able to track all my images on one page, ensuring that none of my images are all over the place and therefore, easy to refernce.      
       </p>
 
       <h2>wireframes</h2>
-      <figure>
-        <img src="../Blogs/Images/AllWireframesOnOnePage.png" alt="Image showing the wireframe of the initial phase of the website" width="650" height="400">
-      </figure>
-      <p>
+      <section class="webImg-container">
+
+        <section class="webImg-box">
+          <section class="webImg-image">
+            <img class="u-photo" src="../Blogs/Images/AllWireframesOnOnePage.png" alt="Image showing the wireframe of the initial phase of the website">
+          </section>
+
+          <section class="webImg-text">
+            <span>WireFrames</span>
+            <p class="p-summary">My Individual Wireframes in one image</p>
+          </section>
+        </section>
+      </section>
+
+      <p class="description">
         What I had planned was for my Home page to include a brief introduction of myself and what its about. I also want to include links to the other folders on my navigation bar, as well an image of myself so the audiece has an idea of what the web developer looks like. 
       </p>
-      <p>
+      <p class="description">
         For my blog page I envisioned the audience be taken to this page, where at first, they are taken to the blog homepage where they are met with links of all the blog posts. The user would have to click the link so they are able to see the rest of the blog posts. The Essay, Portfolio and Design folders would work the same way.
       </p>
 
