Weekly BlogPgs: Prev & Back Buttons

--- a/Blogs/Week 1-BlogPost.html
+++ b/Blogs/Week 1-BlogPost.html
@@ -118,6 +118,11 @@
           </p>
         </section>
       </article>
+
+      <ul>
+        <a href="BlogHomePage.html"  class="prev"> &larr; Prev. </a>
+        <a href="Week2-BlogPost.html" class="next"> Next. &rarr;</a>
+      </ul>
     </main>
     <footer>
       <p>if you get lost, find the nearest star &copy; </p>
