--- a/Blogs/Week 4-BlogPost.html
+++ b/Blogs/Week 4-BlogPost.html
@@ -147,7 +147,8 @@
         </section>
       </article>
       <ul>
-        <a href="BlogHomePage.html"> &lt;&ndash; Return </a>
+        <a href="Week 3-BlogPost.html"  class="prev"> &larr; Prev. </a>
+        <a href="Week 7-BlogPost.html" class="next"> Next. &rarr;</a>
       </ul>
     </main>
     <footer>
