--- a/Blogs/Week 7-BlogPost.html
+++ b/Blogs/Week 7-BlogPost.html
@@ -35,7 +35,7 @@
 
       <main>
         <article class="h-entry">
-          <h1 class="p-name">Week 2 Blog Post</h1>
+          <h1 class="p-name">Week 7 Blog Post</h1>
           <p>
             by
             <a class="p-author h-card" href="../index.html">Seren Mafunda</a> on
@@ -75,7 +75,7 @@
               </section>
             </section>
             
-            <section>
+            <section class="web-text">
                 <h3 class="title">Cons</h3>
                 <p class="description">
                 Littered with Ads
@@ -119,7 +119,7 @@
                   </section>
                 </section>
               
-                <section>
+                <section class="web-text">
                     <h3 class="title">Pros</h3>
                     <p class="description">
                         The Interface is organized
@@ -175,7 +175,7 @@
                       </section>
                     </section>
 
-                    <section>
+                    <section class="web-text">
                         <h3 class="title">Pros</h3>
                         <p class="description">
                             Interactive/visually appealing interface
@@ -193,6 +193,10 @@
             </section>
           </section>
         </article>
+        <ul>
+          <a href="Week 4-BlogPost.html"  class="prev"> &larr; Prev. </a>
+          <a href="BlogHomePage.html" class="next"> Next. &rarr;</a>
+        </ul>
       </main>
       <footer>
         <p>if you get lost, find the nearest star &copy; </p>
