Design Section: Fixing Links (Broke the h1, center heading thing)

--- a/Design/Style Guide.html
+++ b/Design/Style Guide.html
@@ -83,11 +83,12 @@
       </section>
 
       <ul>
-        <a href="Design.html"> &lt;&ndash; Return </a>
+        <a href="Design.html"  class="prev"> &larr; Prev. </a>
+        <a href="Wireframe.html" class="next"> Next. &rarr;</a>
       </ul>
     </main>
     <footer>
-      <p>Proudly Brought to you By Seren Mafunda 2025</p>
+      <p>if you get lost, find the nearest star &copy; </p>
     </footer>
   </body>
 </html>
