--- a/Design/Wireframe.html
+++ b/Design/Wireframe.html
@@ -135,11 +135,12 @@
       </section>
 
       <ul>
-        <a href="Design.html"> &lt;&ndash; Return </a>
+        <a href="Style Guide.html"  class="prev"> &larr; Prev. </a>
+        <a href="Design.html" class="next"> Next. &rarr;</a>
       </ul>
     </main>
     <footer>
-      <p>Proudly Brought to you By Seren Mafunda 2025</p>
+      <p>if you get lost, find the nearest star &copy; </p>
     </footer>
   </body>
 </html>
