--- a/Design/Style Guide.html
+++ b/Design/Style Guide.html
@@ -37,7 +37,7 @@
       <section class="h-entry">
         <h1 class="p-name">Seren's Style Guide</h1>
         <section>
-          <p class="p-summary">
+          <p class="description">
             I've attached a style guide I made using Amber's Coopers template
             that was found on Canva. In it I had included a vision for my colour
             scheme, as well as my font type and the type of imagery I want to
@@ -45,38 +45,38 @@
             artistic and maximilistic images and art. I want it to look vibrant,
             yet cohesive, hence the consistent colour scheme
           </p>
-          <figure>
-            <img
-              src="../Design/Images/SerenStyleGuide.png"
-              alt="An Image of the author's (Seren Mafunda) Style Guide"
-              class="u-photo"
-              width="500"
-              height="700"
-            />
-            <figcaption>Seren Mafunda's Style Guide</figcaption>
-          </figure>
-          Made by <a class="p-author">Seren Mafunda</a>
-          <time class="dt-published" datetimee="2025-03-17">
-            17 March 2025
-          </time>
-        </section>
+          <section class="webImg-container">
 
+
+                  <section class="webImg-boxPortrait">
+                    <section class="webImg-image">
+                      <img class="u-photo" src="../Design/Images/SerenStyleGuide.png" alt="An Image of the author's (Seren Mafunda) Style Guideepage">
+                    </section>
+    
+                    <section class="webImg-text">
+                      <span>17 March 2025</span>
+
+                      <p class="p-summary">Seren Mafunda's Style Guide</p>
+                    </section>
+                  </section>
+                </section>
+          
         <h2>Input Controls:</h2>
-        <p class="Information">
+        <p class="description">
           I decided to add a section for my interface in my style guide, where
           it shows what I would like my buttons would like to look like. I
           wanted my interacitve elements to be very clearly highlighted with the
           hover tool and the use of colour.
         </p>
         <h2>Navigational Components:</h2>
-        <p class="Information">
+        <p class="description">
           I included a navigation bar (made using href links) that will take the
           viewer from one page to another. I also added a return button at the
           bottom of my pages so viewers are able to return to the previous page,
           when on another page.
         </p>
         <h2>Information Components:</h2>
-        <p class="Information">
+        <p class="description">
           I really enjoy the idea of having an animated loading screen when
           people open the home page.
         </p>
