--- a/Blogs/Week 9 - BlogPost.html
+++ b/Blogs/Week 9 - BlogPost.html
@@ -43,3 +43,27 @@
               on 22 April 2025
             </time>
           </p>
+          
+          <section class="e-content">
+            <h2>I Chose to Engage With These 2 Articles</h2>
+            
+            <p>
+                <a href="https://www.internetjustsociety.org/digitalinclusion">Digital Inclusion</a>
+                <a href="https://ulwazi.wits.ac.za/courses/81493/files/8183049?wrap=1">Internet Access is a Fundamental Right</a>
+            </p>
+
+            <p class="summary">
+               Each of these articles explore themes of digital inequality and digital inclusion in their own way. Nanjira Sambuli's (2019) interview on "What is Digital Equality?" prompts the reader to devise solutions on how digital technologies can be leveraged to entirely be rid of the antecedent (forerunner) inequalities that persist today. Whilst Sypros Kasapsis' "Internet Access is a Fundamental Right. [...]" speaks on how internet access should be considered a human right, and should thus be indispensable to all members of "an organized society". I believe that these sentiments are very important and they are an important conversation t to have. Within Kasapsis reading, she poses the question of whether the government should be the one responsible for giving all citizens (regardless of what their income is) access to free internet. I whole heartedly believe that that should be the case, especially during the pandemic. Though regardless of the pandemic, looking at how much of the world uses technology and how it has been integrated into our everyday lives, not having access to the internet keeps you from participating in the new digital economy (Kasapsis, 2020). A lack of internet access means not being able to apply for job postings on platforms like Linkedin, Indeed and the like, which would mean missing out on opportunities that could help you financially. In the same vain a lack of internet access keeps you from networking, and education as well. Therefore it is only fair that the government be the one to distribute internet access to their citizens, no matter their income, because helping them in this way would mean that they would have an equal playing field when competing for jobs in the job market. It would also mean that they would be able to keep up with the new digital economy, people in disadvantaged communities are able to have a leg up in society, for example they will have the opportunity to be able to access their education outside of a school setting. 
+            </p>
+          </section>
+        </article>
+            <ul>
+            <a href="Week 7-BlogPost.html"  class="prev"> &larr; Prev. </a>
+            <a href="Week 10 - BlogPost.html" class="next"> Next. &rarr;</a>
+            </ul>
+        </main>
+    <footer>
+        <p>if you get lost, find the nearest star &copy; </p>
+    </footer>
+    </body>
+</html>
