all my weekly blogs

--- a/Blogs/BlogHomePage.html
+++ b/Blogs/BlogHomePage.html
@@ -108,7 +108,47 @@
             <a href="../Blogs/Week 7-BlogPost.html">Read More...</a>
           </section>
         </section>
+
+        <section class="blog-box">
+          <section class="blog-image">
+            <img src="../Blogs/Images/Week7-CoverPage.jpg" alt="A Close-Imagee of a Blue Galaxy Taken from Pinterest">
+          </section>
+
+         <section class="blog-text">
+            <span>21 April 2025</span>
+            <a href="Week 9 - BlogPost.html" class="blog-title">Week 9 Blog Post</a>
+            <p class="p-summary">Critically Engaged with Two Readings</p>
+            <a href="../Blogs/Week 9 - BlogPost.html">Read More...</a>
+          </section>
+        </section>
+
+        <section class="blog-box">
+          <section class="blog-image">
+            <img src="../Blogs/Week 7-BlogPost.html" alt="A Close-Imagee of a Blue Galaxy Taken from Pinterest">
+          </section>
+
+          <section class="blog-text">
+            <span>28 April 2025</span>
+            <a href="Week 10 - BlogPost.html" class="blog-title">Week 10 Blog Post</a>
+            <p class="p-summary">A Reflection on My Experience Using GitHub, My Interests, and My Goals for the Course </p>
+            <a href="../Blogs/Week 10 - BlogPost.html">Read More...</a>
+          </section>
+
+          <section class="blog-box">
+          <section class="blog-image">
+            <img src="../Blogs/Week 7-BlogPost.html" alt="A Close-Imagee of a Blue Galaxy Taken from Pinterest">
+          </section>
+
+          <section class="blog-text">
+            <span>28 April 2025</span>
+            <a href="Week 11 - BlogPost.html" class="blog-title">Week 11 Blog Post</a>
+            <p class="p-summary">A Reflection on My Experience Using GitHub, My Interests, and My Goals for the Course </p>
+            <a href="../Blogs/Week 11 - BlogPost.html">Read More...</a>
+          </section>
+
         
+
+
         </section>
       </main>
       <footer>
